update reviews copy

--- a/index.html
+++ b/index.html
@@ -405,9 +405,9 @@
 								                  	<img src="https://s17.postimg.org/mqjuw14bz/profile1.png" alt="" class="rounded-circle img-fluid">
 								                </div>
 								                <div class="col-sm-9 col-8">
-								                <h2>Micheal Smith - <span>Web Developer</span></h2>
-								                  <small>Well incremented. Comes with recommended workout. I'm using it to help with bladder leakage issues that I've been experiencing since a recent vasectomy.</small>
-								                  <small class="smallest mute">- willi</small>
+								                <h2>Mike Binoya - <span>7th Grocery Store Owner</span></h2>
+								                  <small>Great work and experience I always receive from Alger. He Helped me to build an Inventory System to manage our my grocery store. Now I can manage my inventory effieciently and improve sales. Have a great after sales support also. Keep up the good work!</small>
+								                  <small class="smallest mute">- Mike</small>
 								                </div>
 					              			</div>
 					            		</div>
@@ -419,9 +419,10 @@
 								                  	<img src="https://s17.postimg.org/5q0yndefz/profile2.png" alt="" class="rounded-circle img-fluid">
 								                </div>
 								                <div class="col-sm-9 col-8">
-								                  <h2>Helena Doe - <span>Architect</span></h2>
-								                  <small>Well incremented. Comes with recommended workout. I'm using it to help with bladder leakage issues that I've been experiencing since a recent vasectomy.</small>
-								                  <small class="smallest mute">- willi</small>
+								                  <h2>Kevin Fidel - <span>Manager</span></h2>
+								                  <small>Alger has been an integral member of our Mobile team, particularly excelling in his role of providing production support. One of Alger's standout qualities is his consistent quick turnaround time in resolving issues. Alger takes full accountability for his assignments, and consistently delivers high-quality results.
+                                  </small>
+								                  <small class="smallest mute">- Kev</small>
 								                </div>
 					              			</div>
 					            		</div>
@@ -438,9 +439,10 @@
 								                  	<img src="https://s17.postimg.org/7ulbog0n3/profile3.png" alt="" class="rounded-circle img-fluid">
 								                </div>
 								                <div class="col-sm-9 col-8">
-								                <h2>John Doe - <span>Ceo Mobile company</span></h2>
-								                  <small>Well incremented. Comes with recommended workout. I'm using it to help with bladder leakage issues that I've been experiencing since a recent vasectomy.</small>
-								                  <small class="smallest mute">- willi</small>
+								                <h2>Kim Asuncion Doe - <span>Developer</span></h2>
+								                  <small>Good teammate and developer in the team. Always hunger for more knowledge that aligned in your skill.
+                                  </small>
+								                  <small class="smallest mute">- Kim</small>
 								                </div>
 					              			</div>
 					            		</div>
@@ -452,16 +454,48 @@
 								                  	<img src="https://s17.postimg.org/u6j4hu7gv/profile4.png" alt="" class="rounded-circle img-fluid">
 								                </div>
 								                <div class="col-sm-9 col-8">
-								                <h2>Helena Doe - <span>Architect</span></h2>
-								                  <small>Well incremented. Comes with recommended workout. I'm using it to help with bladder leakage issues that I've been experiencing since a recent vasectomy.</small>
-								                  <small class="smallest mute">- willi</small>
+								                <h2>Mary Rose - <span>Developer</span></h2>
+								                  <small>Alger's contributions have been invaluable to the project's success, he shows mastery of the project's technology and can complete tasks at a faster pace. He is also dedicated and confident on the tickets that he finished. Thank you and Good job!</small>
+								                  <small class="smallest mute">- Mary</small>
 								                </div>
 					              			</div>
 					            		</div>
 				            		</div>
 			            		</div>
 			          		</div>
-			          		
+			          		<div class="carousel-item">
+			            		<div class="bg"></div>
+			              			<div class="row">
+				            		<div class="col-md-6 col-12">
+				            			<div class="carousel-caption">
+					              			<div class="row">
+								                <div class="col-sm-3 col-4 align-items-start">
+								                  	<img src="https://s17.postimg.org/7ulbog0n3/profile3.png" alt="" class="rounded-circle img-fluid">
+								                </div>
+								                <div class="col-sm-9 col-8">
+								                <h2>Roy Siroy - <span>Architect</span></h2>
+								                  <small>Alger, as a senior developer our Optimization team, is able to work independently and complete complex tasks in React.js and Node.js. I can rely on him for any task given to him; in fact, he has taken the lead in driving how to improve the solution.</small>
+								                  <small class="smallest mute">- Roy</small>
+								                </div>
+					              			</div>
+					            		</div>
+				            		</div>
+				            		<div class="col-md-6 col-12">
+				            			<div class="carousel-caption">
+					              			<div class="row">
+								                <div class="col-sm-3 col-4 align-items-start">
+								                  	<img src="https://s17.postimg.org/u6j4hu7gv/profile4.png" alt="" class="rounded-circle img-fluid">
+								                </div>
+								                <div class="col-sm-9 col-8">
+								                <h2>Kel Isaag - <span>Developer</span></h2>
+								                  <small>Alger's exceptional efficiency and extensive expertise have been instrumental in advancing our projects. His profound understanding of his field allows him to skillfully leverage his knowledge, driving significant progress and contributing significantly to the success of our project.</small>
+								                  <small class="smallest mute">- Kel</small>
+								                </div>
+					              			</div>
+					            		</div>
+				            		</div>
+			            		</div>
+			          		</div>
 			    		</div>
 				        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
 				          <span class="carousel-control-prev-icon" aria-hidden="true"><i class="uil-angle-left"></i></span>
