fix experience link

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </h1> 
                         <p>Let's turn your ideas into reality. I am a seasoned software developer, working across website and mobile app development.</p>
                         <div class="custom-btn-group mt-4">
-                          <a href="#resume" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Experience</a>
+                          <a href="#experience" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Experience</a>
                           <a href="#contact" class="btn custom-btn custom-btn-bg custom-btn-link">Get a free quote</a>
                         </div>
                     </div>
