--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 								                </div>
 								                <div class="col-sm-9 col-8">
 								                <h2>Mike Binoya - <span>7th Grocery Store Owner</span></h2>
-								                  <small>Great work and experience I always receive from Alger. He Helped me to build an Inventory System to manage our my grocery store. Now I can manage my inventory effieciently and improve sales. Have a great after sales support also. Keep up the good work!</small>
+								                  <small>Great work and experience I always receive from Alger. He Helped me to build an Inventory System to manage my grocery store. Now I can manage my inventory effieciently and improve sales. After sales support is also great!. Keep up the good work!</small>
 								                  <small class="smallest mute">- Mike</small>
 								                </div>
 					              			</div>
