--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
 								                </div>
 								                <div class="col-sm-9 col-8">
 								                <h2>Roy Siroy - <span>Architect</span></h2>
-								                  <small>Alger, as a senior developer our Optimization team, is able to work independently and complete complex tasks in React.js and Node.js. I can rely on him for any task given to him; in fact, he has taken the lead in driving how to improve the solution.</small>
+								                  <small>Alger, as a senior developer in our Optimization team, is able to work independently and complete complex tasks in React.js and Node.js. I can rely on him for any task given to him; in fact, he has taken the lead in driving how to improve the solution.</small>
 								                  <small class="smallest mute">- Roy</small>
 								                </div>
 					              			</div>
