update metda data

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Welcome to my portfolio website, I am a full stack software developer with over 5 years of experience in executing innovative software solution to increase business productivity">
+    <meta name="description" content="Software Developer working across web and mobile app developer with 6 years of experience">
     <meta name="author" content="Alger Makiputin">
-
     <title>Alger Makiputin - Full Stack Software Developer</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
